objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Technologies_of_Interest__c</fullName>
        <description>The Technologies that the contact or their company is interested in.</description>
        <label>Technologies of Interest</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Cisco ONE EA</fullName>
                </value>
                <value>
                    <fullName>COLLABORATION-Conferencing</fullName>
                </value>
                <value>
                    <fullName>COLLABORATION-Contact Center</fullName>
                </value>
                <value>
                    <fullName>COLLABORATION-ELA</fullName>
                </value>
                <value>
                    <fullName>Collaboration-Other Collaboration</fullName>
                </value>
                <value>
                    <fullName>COLLABORATION-TP Endpoints</fullName>
                </value>
                <value>
                    <fullName>COLLABORATION-TP Multiparty Conferencing</fullName>
                </value>
                <value>
                    <fullName>COLLABORATION-UC Endpoints</fullName>
                </value>
                <value>
                    <fullName>Collaboration-UC Infrastructure Applications</fullName>
                </value>
                <value>
                    <fullName>Computing Systems-Hyper Converged</fullName>
                </value>
                <value>
                    <fullName>Computing Systems-Servers</fullName>
                </value>
                <value>
                    <fullName>Computing Systems-UCS Invicta</fullName>
                </value>
                <value>
                    <fullName>Data Center Switching-NX1K</fullName>
                </value>
                <value>
                    <fullName>Data Center Switching-NX2/4/5/6K</fullName>
                </value>
                <value>
                    <fullName>Data Center Switching-NX3K</fullName>
                </value>
                <value>
                    <fullName>Data Center Switching-NX7K</fullName>
                </value>
                <value>
                    <fullName>Data Center Switching-NX8K</fullName>
                </value>
                <value>
                    <fullName>Data Center Switching-NX9K</fullName>
                </value>
                <value>
                    <fullName>Data Center Switching-Optics - DC Allocation</fullName>
                </value>
                <value>
                    <fullName>Data Center Switching-Other Data Center</fullName>
                </value>
                <value>
                    <fullName>Data Center Switching-SAN</fullName>
                </value>
                <value>
                    <fullName>DC - ECS - CMGT</fullName>
                </value>
                <value>
                    <fullName>DC - ECS - IAAS</fullName>
                </value>
                <value>
                    <fullName>DC - Tetration</fullName>
                </value>
                <value>
                    <fullName>EN - Advanced Mobility</fullName>
                </value>
                <value>
                    <fullName>Enterprise Networking - DNA Center</fullName>
                </value>
                <value>
                    <fullName>ENTERPRISE ROUTING-Ent. Access Routing</fullName>
                </value>
                <value>
                    <fullName>ENTERPRISE ROUTING-Ent. Edge Routing</fullName>
                </value>
                <value>
                    <fullName>Enterprise Switching-Ent. - Other</fullName>
                </value>
                <value>
                    <fullName>Enterprise Switching-Ent. Small Business - Switching</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Technology_Interest_1_Flag__c</fullName>
        <description>First Topic of Interest Flag</description>
        <label>Technology Interest 1 Flag</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Technology_Interest_1_Marketing_Sourced__c</fullName>
        <description>Topic of Intrest</description>
        <label>Technology Interest 1(Marketing Sourced)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Marketing Sourced</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Technology_Interest_1_Score__c</fullName>
        <description>Score for the First Topic of Interest</description>
        <label>Technology Interest 1 Score</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Technology_Interest_2_Flag__c</fullName>
        <description>Second Topic of Interest Flag</description>
        <label>Technology Interest 2 Flag</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Technology_Interest_2_Marketing_Sourced__c</fullName>
        <description>Topic of Intrest</description>
        <label>Technology Interest 2(Marketing Sourced)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Marketing Sourced</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Technology_Interest_2_Score__c</fullName>
        <description>Score for the Second Topic of Interest</description>
        <label>Technology Interest 2 Score</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time_Zone__c</fullName>
        <description>Contacts Time Zone</description>
        <label>Time Zone</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>(GMT+05:00) Pakistan Time (Asia/Karachi)</fullName>
                </value>
                <value>
                    <fullName>(GMT+05:00) Uzbekistan Time (Asia/Tashkent)</fullName>
                </value>
                <value>
                    <fullName>(GMT+05:00) Yekaterinburg Summer Time (Asia/Yekaterinburg)</fullName>
                </value>
                <value>
                    <fullName>(GMT+05:30) India Standard Time (Asia/Calcutta)</fullName>
                </value>
                <value>
                    <fullName>(GMT+05:45) Nepal Time (Asia/Katmandu)</fullName>
                </value>
                <value>
                    <fullName>(GMT+06:00) Bangladesh Time (Asia/Dacca)</fullName>
                </value>
                <value>
                    <fullName>(GMT+06:00) Sri Lanka Time (Asia/Colombo)</fullName>
                </value>
                <value>
                    <fullName>(GMT+06:30) Myanmar Time (Asia/Rangoon)</fullName>
                </value>
                <value>
                    <fullName>(GMT+07:00) Indochina Time (Asia/Bangkok)</fullName>
                </value>
                <value>
                    <fullName>(GMT+07:00) Indochina Time (Asia/Saigon)</fullName>
                </value>
                <value>
                    <fullName>(GMT+07:00) West Indonesia Time (Asia/Jakarta)</fullName>
                </value>
                <value>
                    <fullName>(GMT+08:00) China Standard Time (Asia/Shanghai)</fullName>
                </value>
                <value>
                    <fullName>(GMT+08:00) China Standard Time (Asia/Taipei)</fullName>
                </value>
                <value>
                    <fullName>(GMT+08:00) Hong Kong Time (Asia/Hong_Kong)</fullName>
                </value>
                <value>
                    <fullName>(GMT+08:00) Malaysia Time (Asia/Kuala_Lumpur)</fullName>
                </value>
                <value>
                    <fullName>(GMT+08:00) Philippines Time (Asia/Manila)</fullName>
                </value>
                <value>
                    <fullName>(GMT+08:00) Singapore Time (Asia/Singapore)</fullName>
                </value>
                <value>
                    <fullName>(GMT+08:00) Western Standard Time (Australia)</fullName>
                </value>
                <value>
                    <fullName>(GMT+09:00) Korea Standard Time (Asia/Seoul)</fullName>
                </value>
                <value>
                    <fullName>(GMT+09:30) Central Standard Time (Northern Territory)</fullName>
                </value>
                <value>
                    <fullName>(GMT+09:30) Central Standard Time (South Australia)</fullName>
                </value>
                <value>
                    <fullName>(GMT+10:00) Eastern Standard Time (New South Wales)</fullName>
                </value>
                <value>
                    <fullName>(GMT+10:00) Eastern Standard Time (Queensland)</fullName>
                </value>
                <value>
                    <fullName>(GMT+10:30) Load Howe Standard Time(Australia/Lord_Howe)</fullName>
                </value>
                <value>
                    <fullName>(GMT+11:00) Solomon Is. Time (Pacific/Guadalcanal)</fullName>
                </value>
                <value>
                    <fullName>(GMT+11:30) Norfolk Time (Pacific/Norfolk)</fullName>
                </value>
                <value>
                    <fullName>(GMT+12:00) Fiji Time (Pacific/Fiji)</fullName>
                </value>
                <value>
                    <fullName>(GMT+12:00) New Zealand Standard Time (Pacific/Auckland)</fullName>
                </value>
                <value>
                    <fullName>(GMT+12:00) Petropavlovsk-Kamchatski Summer Time (Asia/Kamchatka)</fullName>
                </value>
                <value>
                    <fullName>(GMT+12:45) Chatham Standard Time (Pacific/Chatham)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Title_English__c</fullName>
        <description>Field used to insert the partner title in local language by internal user</description>
        <label>Title (Local)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Top_3_Challenges__c</fullName>
        <description>The top 3 challenges the contact or their company faces from the contact’s perspective.</description>
        <label>TO BE DELETED Top 3 Challenges</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Competitive Threats</fullName>
                </value>
                <value>
                    <fullName>New Technologies</fullName>
                </value>
                <value>
                    <fullName>New Entrants</fullName>
                </value>
                <value>
                    <fullName>Market Saturation</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UserTheatre1__c</fullName>
        <formula>CASE(TEXT(Account.Geographic_Region__c) , 
'APJC','APJC-APAC', 
'EMEA','EMEAR', 
'Americas-Global Enterprise Segment' 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Portal User Theatre</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Value_Proposition__c</fullName>
        <description>The Cisco value proposition from the contact’s perspective.</description>
        <label>TO BE DELETED Value Proposition</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Vertical_Markets_Preferences__c</fullName>
        <description>One of the 8 partner contact preferences to indicate preference for marketing communication</description>
        <label>Verticals/Industries</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>WinningContact__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field used for P360 1B partner contact cleanup</description>
        <label>Winning Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>before_dm_last_modified_date__c</fullName>
        <description>Used by data migration team to store the last modified date before the record was updated due to data migration activity.</description>
        <label>Before_dm_last_modified_date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>isdc_closeDate__c</fullName>
        <description>Date of the most recent ISDC Close Score</description>
        <label>ISDC Close Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>isdc_closescore__c</fullName>
        <description>This is a score that is generated by ISDC’s predictive model that shows the likelihood that a deal will close for this person. Ranked 1-100.</description>
        <label>ISDC Close Score</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <sharingModel>ControlledByParent</sharingModel>
    <listViews>
        <fullName>AllActiveContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>JobFunction__c</columns>
        <columns>JobLevel__c</columns>
        <columns>CONTACT.REPORTS_TO.NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>ContactPermissionCall__c</columns>
        <columns>ContactPermissionEmail__c</columns>
        <columns>ContactPermissionMail__c</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.Manual_End_Customer_Contact</value>
        </filters>
        <filters>
            <field>ContactStatus__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <label>All Active Contacts</label>
    </listViews>
    <listViews>
        <fullName>AllInactiveContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Marketing_Activity__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ContactStatus__c</field>
            <operation>equals</operation>
            <value>Inactive</value>
        </filters>
        <label>All Inactive Contacts</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>AllRecentlyCreatedContactsActive</fullName>
        <booleanFilter>1 AND 2</booleanFilter>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>JobFunction__c</columns>
        <columns>JobLevel__c</columns>
        <columns>CONTACT.REPORTS_TO.NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>ContactPermissionCall__c</columns>
        <columns>ContactPermissionEmail__c</columns>
        <columns>ContactPermissionMail__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <filters>
            <field>ContactStatus__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <label>All Recently Created Contacts (Active)</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AllRecentlyModifiedContactsActive</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>JobFunction__c</columns>
        <columns>JobLevel__c</columns>
        <columns>CONTACT.REPORTS_TO.NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>ContactPermissionCall__c</columns>
        <columns>ContactPermissionEmail__c</columns>
        <columns>ContactPermissionMail__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.LAST_UPDATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <filters>
            <field>ContactStatus__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <label>All Recently Modified Contacts (Active)</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Active_Partner_Contacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Account_Name_Local__c</columns>
        <columns>Partner_Site_Name__c</columns>
        <columns>Assigned_Site_ID__c</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.Manual_Partner_Contact,Contact.Partner_Provided_Contact</value>
        </filters>
        <filters>
            <field>ContactStatus__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <label>All Active Partner Contacts</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Active_Partner_Provided_Contacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Account_Name_Local__c</columns>
        <columns>Partner_Site_Name__c</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.Partner_Provided_Contact</value>
        </filters>
        <filters>
            <field>ContactStatus__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <label>All Active Partner Provided Contacts</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Customer_Contacts_Multi_Edit</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>FULL_NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>JobFunction__c</columns>
        <columns>JobLevel__c</columns>
        <columns>CONTACT.REPORTS_TO.NAME</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.Manual_End_Customer_Contact</value>
        </filters>
        <label>All Customer Contacts Multi Edit</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>BirthdaysThisMonthActive</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTACT.BIRTHDATE</columns>
        <columns>Marketing_Activity__c</columns>
        <columns>ContactPermissionCall__c</columns>
        <columns>ContactPermissionEmail__c</columns>
        <columns>ContactPermissionMail__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.BIRTHDATE</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>ContactStatus__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <filters>
            <field>CCO_ID__c</field>
            <operation>equals</operation>
            <value>servadmin</value>
        </filters>
        <label>Birthdays This Month (Active)</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Contacts_Isolate</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>ACCOUNT.ACCOUNT_ID</columns>
        <columns>Comments__c</columns>
        <columns>OldAccountNameBeforeDeletion__c</columns>
        <columns>OldContactOwnerBeforeDeletion__c</columns>
        <columns>Optional_Field_1__c</columns>
        <columns>Optional_Field_2__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Optional_Field_2__c</field>
            <operation>contains</operation>
            <value>Isolate</value>
        </filters>
        <filters>
            <field>Optional_Field_1__c</field>
            <operation>equals</operation>
            <value>Q1FY17</value>
        </filters>
        <filters>
            <field>ACCOUNT.NAME</field>
            <operation>notContain</operation>
            <value>dummy</value>
        </filters>
        <label>Contacts Isolate</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>GSSO_Partner_Provided_Contact</fullName>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.FIRST_NAME</columns>
        <columns>CONTACT.LAST_NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>Partner_Role__c</columns>
        <columns>Content_Threat_Stage__c</columns>
        <columns>Network_Threat_Stage__c</columns>
        <columns>Malware_Control_Stage__c</columns>
        <columns>Secure_Access_Mobility_Stage__c</columns>
        <columns>Contact_Flags__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.Partner_Provided_Contact</value>
        </filters>
        <filters>
            <field>CONTACT.EMAIL</field>
            <operation>equals</operation>
        </filters>
        <label>GSSO - Partner Provided Contact</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>MyActiveContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>JobFunction__c</columns>
        <columns>JobLevel__c</columns>
        <columns>CONTACT.REPORTS_TO.NAME</columns>
        <columns>ContactPermissionCall__c</columns>
        <columns>ContactPermissionEmail__c</columns>
        <columns>ContactPermissionMail__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ContactStatus__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <label>My Active Contacts</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>My_Customer_Contacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ContactStatus__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>JobFunction__c</columns>
        <columns>JobLevel__c</columns>
        <columns>CONTACT.REPORTS_TO.NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>ContactPermissionCall__c</columns>
        <columns>ContactPermissionEmail__c</columns>
        <columns>ContactPermissionMail__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.Manual_End_Customer_Contact</value>
        </filters>
        <label>My Customer Contacts</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Customer_Contacts_Multi_Edit</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>FULL_NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>JobFunction__c</columns>
        <columns>JobLevel__c</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.REPORTS_TO.NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.Manual_End_Customer_Contact</value>
        </filters>
        <filters>
            <field>ContactStatus__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <label>My Customer Contacts Multi Edit</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>NewLastWeekActive</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>JobFunction__c</columns>
        <columns>JobLevel__c</columns>
        <columns>CONTACT.REPORTS_TO.NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>ContactPermissionCall__c</columns>
        <columns>ContactPermissionEmail__c</columns>
        <columns>ContactPermissionMail__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <filters>
            <field>ContactStatus__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <label>New Last Week (Active)</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>NewThisWeekActive</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>JobFunction__c</columns>
        <columns>JobLevel__c</columns>
        <columns>CONTACT.REPORTS_TO.NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>ContactPermissionCall__c</columns>
        <columns>ContactPermissionEmail__c</columns>
        <columns>ContactPermissionMail__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <filters>
            <field>ContactStatus__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <label>New This Week (Active)</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>CX_Internal_Contact</fullName>
        <active>true</active>
        <description>Used by CX users</description>
        <label>Internal Contact</label>
    </recordTypes>
    <recordTypes>
        <fullName>Manual_End_Customer_Contact</fullName>
        <active>true</active>
        <description>End Customer Contacts</description>
        <label>End Customer Contact</label>
    </recordTypes>
    <recordTypes>
        <fullName>Manual_Partner_Contact</fullName>
        <active>true</active>
        <description>User Created Manual Partner Contacts</description>
        <label>Manual Partner Contact</label>
    </recordTypes>
    <recordTypes>
        <fullName>Partner_Provided_Contact</fullName>
        <active>true</active>
        <description>PDB Partner Contact for Integration</description>
        <label>Partner Provided Contact</label>
    </recordTypes>
    <validationRules>
        <fullName>CX_FIrst_Name_required</fullName>
        <active>true</active>
        <description>First Name is required to create CX internal contact.</description>
        <errorConditionFormula>AND(
    RecordType.DeveloperName = 'CX_Internal_Contact',
    ISBLANK( FirstName ) 
)</errorConditionFormula>
        <errorDisplayField>FirstName</errorDisplayField>
        <errorMessage>Please enter First Name.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Contact_Flags</fullName>
        <active>true</active>
        <description>Prevent end-users from editing TSN Entitlement Enabled Flag</description>
        <errorConditionFormula>($User.Id != '005300000010X8d'  &amp;&amp;
$User.Id != '0058000000457Pn' &amp;&amp;
$User.Id != '005300000010X7t' &amp;&amp;
$User.Id != '00580000003IBLx' &amp;&amp;

$Profile.Id != $Setup.ProfileID__c.Cisco_ADMIN__c &amp;&amp;
$Profile.Id != $Setup.ProfileID__c.Cisco_Data_Migration__c &amp;&amp;
$Profile.Id != $Setup.ProfileID__c.Cisco_Integration_Echo_Suppression__c &amp;&amp;
$Profile.Id != $Setup.ProfileID__c.Cisco_GSTS__c &amp;&amp;
$Profile.Id != $Setup.ProfileID__c.Cisco_GSTS_Analyst__c) &amp;&amp;

((
INCLUDES( Contact_Flags__c, 'TSN Entitlement Enabled') &amp;&amp;
NOT(INCLUDES(PRIORVALUE(Contact_Flags__c), 'TSN Entitlement Enabled'))
)
||
(
INCLUDES(PRIORVALUE(Contact_Flags__c), 'TSN Entitlement Enabled') &amp;&amp;
NOT(INCLUDES( Contact_Flags__c, 'TSN Entitlement Enabled'))
))</errorConditionFormula>
        <errorDisplayField>Contact_Flags__c</errorDisplayField>
        <errorMessage>Please open a case with GSTS to change Partner Entitlements.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Contact_Last_Name_Not_Non_English</fullName>
        <active>true</active>
        <description>Validation Rule to check if the user has entered non English characters as Last Name</description>
        <errorConditionFormula>if((RecordTypeId == $Setup.ObjectRecordTypeIds__c.Contact_Manual_Partner_RecordTypeId__c &amp;&amp; 
  $Profile.Id !=  $Setup.ProfileID__c.Cisco_ADMIN__c &amp;&amp; 
  $Profile.Id !=  $Setup.ProfileID__c.Cisco_Data_Migration__c &amp;&amp; 
  $Profile.Id !=  $Setup.ProfileID__c.Cisco_Integration_Echo_Suppression__c  &amp;&amp; 
  $Profile.Id !=  $Setup.ProfileID__c.Cisco_GSTS__c &amp;&amp; 
  $Profile.Id !=  $Setup.ProfileID__c.Cisco_GSTS_Analyst__c), 
   (NOT REGEX(LastName,'^[a-zA-Z \'-]+$')), 
   FALSE
   )</errorConditionFormula>
        <errorMessage>Please enter Contact Last Name in English. You can provide local language name in Partner Contact Name (Local) field.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Contact_Name_Not_to_be_Editable</fullName>
        <active>true</active>
        <description>Restrict the user from changing the contact name.</description>
        <errorConditionFormula>$User.Username != 'p360_integration_user1@cisco.com' &amp;&amp;
$RecordType.Id = $Setup.ObjectRecordTypeIds__c.Contact_PDB_RecordTypeId__c &amp;&amp;
( FirstName != PRIORVALUE(FirstName) || LastName != PRIORVALUE(LastName ))</errorConditionFormula>
        <errorMessage>Partner Contact names cannot be changed in order to maintain the sync with the Partner Database.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PDB_Record_to_Channel_Account</fullName>
        <active>true</active>
        <description>Validation rule to check that the Partner Provided record (PDB) is associated with Channel accounts only</description>
        <errorConditionFormula>if ( ($RecordType.Id == $Setup.ObjectRecordTypeIds__c.Contact_Manual_Partner_RecordTypeId__c) &amp;&amp;  
($Profile.Name  &lt;&gt; 'Cisco_CustomerSuccess') &amp;&amp; 
($Profile.Name  &lt;&gt; 'Cisco_SPM') &amp;&amp;
($Profile.Name  &lt;&gt; 'Cisco_Integration_Echo_Suppression'), TRUE, FALSE) &amp;&amp;
if ( Account.RecordTypeId != $Setup.ObjectRecordTypeIds__c.AccountChannelRecordTypeId__c, TRUE, FALSE)</errorConditionFormula>
        <errorDisplayField>AccountId</errorDisplayField>
        <errorMessage>Please Associate this contact to Channel Account</errorMessage>
    </validationRules>
</CustomObject>